# DCL-Log-Viewer-Final-

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dcl_editor/: app.py  startup.py
dcl_editor/core/: classifier.py  extractor.py  models.py  normalizer.py  tokenizer.py
dcl_editor/io/: indexer.py  loader.py
dcl_editor/tests/: test_core.py  test_startup.py
dcl_editor/ui/: dialogs.py  main_window.py  splash_intro.py  theme.py  widgets.py
scripts/: win_bootstrap.bat  win_bootstrap.ps1
