[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcl-editor"
version = "0.1.0"
description = "Desktop viewer for DCL ATC exchanges"
requires-python = ">=3.10,<=3.13"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PySide6",
    "packaging>=24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
addopts = "-ra"
